--- a/public/tags/layout/index.html
+++ b/public/tags/layout/index.html
@@ -11,11 +11,11 @@
 <meta property="og:description" content="What does this even do?" />
 <meta property="og:type" content="website" />
 <meta property="og:url" content="/tags/layout/" />
-<meta property="og:image" content="/pexels-photo-617278.jpg"/>
+<meta property="og:image" content="/"/>
 <meta property="og:updated_time" content="2020-01-01T00:00:00+08:00" />
 
 <meta name="twitter:card" content="summary_large_image"/>
-<meta name="twitter:image" content="/pexels-photo-617278.jpg"/>
+<meta name="twitter:image" content="/"/>
 
 <meta name="twitter:title" content="Layout"/>
 <meta name="twitter:description" content="What does this even do?"/>
