--- a/themes/hugo-kiera/layouts/partials/footer.html
+++ b/themes/hugo-kiera/layouts/partials/footer.html
@@ -2,7 +2,7 @@
     <footer>
         <h6>{{ .Site.Copyright | markdownify }} |
             {{ T "rendered" }} <a href="https://gohugo.io" title="Hugo">Hugo</a> |
-            <a href="{{.Site.BaseURL}}index.xml">{{ T "subscribe" }} </a></h6>
+            <a href="{{.Site.BaseURL}}index.xml">{{ T "#subscribe" }} </a></h6>
     </footer>
 </div>
 <script src="{{ "js/scripts.js" | relURL }}"></script>
